# Tang_Agent

./: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  app.py
backend/app/api/: routes.py  schemas.py
backend/app/backends/: __init__.py  command_runner.py  local_shell.py  task_scoped.py  workspace.py
backend/app/core/: agent.py  code_review.py  config.py  conversation.py  conversation_runtime.py  github_review.py  logging_config.py  model.py  prompt.py  review.py  review_diff.py  run_limits.py  subagents.py  task_intent.py  task_runtime.py
backend/app/memory/: __init__.py  loader.py
backend/data/: tasks.sqlite
docs/: frontend-backend-contract.md  lesson-38-acceptance.md  lesson-39-acceptance.md  lesson-40-acceptance.md  lx-aicoding-agent-runtime-comparison.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: review-acceptance.spec.ts
frontend/src/: App.css  App.test.tsx  App.tsx  MarkdownContent.tsx  api.test.ts  api.ts  index.css  stepPresentation.ts  streamUtils.test.ts  streamUtils.ts
scripts/: lesson_38_benchmark.py  verify_model.py
tests/: test_agent_loop.py  test_api.py  test_checkpoint.py  test_command_runner.py  test_conversation_api.py  test_conversation_runtime.py  test_conversation_store.py  test_foundation.py  test_github.py  test_github_review.py  test_memory.py  test_model.py  test_navigation_api.py  test_navigation_store.py  test_repositories.py  test_repository_api.py  test_review_diff.py  test_review_findings.py  test_run_limits.py  test_skills.py  test_skills_api.py  test_sqlite_store.py  test_subagents.py  test_task_policy.py  test_web_search.py  test_workspace.py  test_workspace_search.py
tests/tests/: test_local_shell_files.py
(+20 files in other folders)
