[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tang-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "fastapi>=0.139.2",
    "langchain-core>=1.5.0",
    "langchain-deepseek>=1.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.51.0",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
